# alchemist

./: .gitignore  LICENSE  PRODUCTION_READINESS.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  label-sync.yml
alchemist/: __init__.py  cli.py  config.py  events.py  pipeline.py  pipeline_incremental.py  solo.py  workspace_lock.py
alchemist/analyzer/: __init__.py  call_graph.py  module_detector.py  parser.py  patterns.py  preprocessor.py
alchemist/architect/: __init__.py  crate_designer.py  field_scanner.py  global_state.py  refactor.py  schemas.py  search.py  trait_extractor.py  validator.py
alchemist/extractor/: __init__.py  c_shim_fuzz.py  constants_extractor.py  function_classifier.py  fuzz_vectors.py  normalizer.py  schemas.py  spec_auditor.py  spec_extractor.py  spec_validator.py  state_mutator.py  variant_resolver.py
alchemist/implementer/: __init__.py  anti_stub.py  api_completeness.py  code_generator.py  decomposed.py  escape_valve.py  holistic.py  init_templates.py  multi_sample.py  parallel.py  reference_probe.py  regression.py  scrubber.py  semantic_lints.py  skeleton.py  tdd_generator.py  test_generator.py  unsafe_fence.py
alchemist/llm/: __init__.py  client.py  structured.py
docs/: api_reference.md  architecture.md  phase_d_playbook.md  plugins.md  troubleshooting.md  tutorial.md
tests/: test_amplifier.py  test_anti_stub.py  test_anti_stub_evasion.py  test_api_completeness.py  test_arch_search.py  test_auto_ffi.py  test_build_c_dll.py  test_compress_bound_reference.py  test_constants_extractor.py  test_crc_word_reference.py  test_decomposed.py  test_differential_tester.py  test_escape_valve.py  test_events.py  test_function_classifier.py  test_fuzz_vectors.py  test_global_state.py  test_incremental.py  test_local_llm.py  test_multi_sample.py  test_multi_sample_integrity.py  test_parallel.py  test_phase_d_zlib.py  test_pipeline_integration.py  test_plugins.py  test_preprocessor.py  test_proptest_gen.py  test_refactor.py  test_reference_probe.py  test_references.py  test_regression.py  test_scrubber.py  test_scrubber_brace_matching.py  test_semantic_lints.py  test_skeleton.py  test_spec_normalizer.py  test_spec_validator.py  test_standards_catalog.py  test_tdd_generator.py  test_test_filter_isolation.py  (+7 more)
verify/diff_test/: Cargo.toml  build.rs
verify/diff_test/src/: lib.rs  roundtrip.rs  smoke.rs
verify/diff_test/tests/: differential.rs
(+88 files in other folders)
