[project]
name = "alchemist"
version = "0.1.0"
description = "Algorithm-aware C-to-Rust translation toolkit"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-c>=0.24.0",
    "tree-sitter-cpp>=0.23.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tiktoken>=0.7.0",
    "jinja2>=3.1.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]

[project.scripts]
alchemist = "alchemist.cli:app"

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py312"
